# claude-widget

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  auth.rs  lib.rs  main.rs  models.rs  poller.rs  scraper.rs  session.rs  window.rs
src/lib/: Login.svelte  Sparkline.svelte  Timer.svelte  UsageBar.svelte  types.ts
