[package]
name = "claude-widget"
version = "0.1.0"
description = "A desktop widget to monitor Claude AI usage"
authors = ["sunhyuk"]
edition = "2021"

[lib]
name = "claude_widget_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
url = "2"
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
] }
